Employee margin fix (#3012)
* Update sandbox.scss

* Update CHANGELOG.md

* Update package.json for sandbox login page

* Update index.html

* remove the extra margin from the employee side in all pages

* resolved the changelog

* changed the classname for margin-fix

* removed extra css

---------

--- a/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -689,6 +689,11 @@ input[type="number"] {
   margin: 70px;
 }
 
+.employee-app-wrapper.margin-fix {
+    margin: -2px;
+   }
+   
+
 .ws-custom-wrapper {
   .submit {
     display: flex !important;
